@@ -14,18 +14,42 @@
 	<bean id="nopInterceptor" class="org.springframework.aop.interceptor.NopInterceptor">
 	</bean>
 	
-	<bean id="regexpAdvisor" class="org.springframework.aop.support.RegexpMethodPointcutAroundAdvisor">
+	<bean id="settersAdvisor" class="org.springframework.aop.support.RegexpMethodPointcutAroundAdvisor">
 		<property name="interceptor"><ref local="nopInterceptor"/></property>
 		<property name="pattern"><value>.*get.*</value></property>
 	</bean>
 	
-	<bean id="advised" 
+	<bean id="settersAdvised" 
 			class="org.springframework.aop.framework.ProxyFactoryBean"
 	>	
 		<property name="proxyInterfaces"><value>org.springframework.beans.ITestBean</value></property>		
 		
 		<property name="target"><ref local="test"/></property>	
-		<property name="interceptorNames"><value>regexpAdvisor</value></property>		
+		<property name="interceptorNames"><value>settersAdvisor</value></property>		
+		
+	</bean>
+	
+	
+	<!-- Illustrates use of multiple patterns -->
+	<bean id="settersAndAbsquatulateAdvisor" class="org.springframework.aop.support.RegexpMethodPointcutAroundAdvisor">
+		<property name="interceptor"><ref local="nopInterceptor"/></property>
+		<property name="patterns">
+			<list>
+				<value>.*get.*</value>
+				<value>.*absquatulate</value>
+			</list>
+		</property>
+	</bean>
+	
+	<bean id="settersAndAbsquatulateAdvised" 
+			class="org.springframework.aop.framework.ProxyFactoryBean"
+	>	
+		<property name="proxyInterfaces"><value>org.springframework.beans.ITestBean</value></property>		
+		
+		<!-- Force CGLIB so we can cast to TestBean -->
+		<property name="proxyTargetClass"><value>true</value></property>
+		<property name="target"><ref local="test"/></property>	
+		<property name="interceptorNames"><value>settersAndAbsquatulateAdvisor</value></property>		
 		
 	</bean>
 	
